--- a/analysis/metabolites.Rmd
+++ b/analysis/metabolites.Rmd
@@ -58,7 +58,7 @@ options(stringsAsFactors = FALSE)
 
 ## Load metabolite composition data
 
-This analysis set out to test whether sexual selection treatment had an effect on metabolite composition of flies. We measured fresh and dry fly weight in milligrams, plus the concentrations of five metabolites. These are:
+This analysis set out to test whether sexual selection treatment had an effect on macro-metabolite composition of flies. We measured fresh and dry fly weight in milligrams, plus the concentrations of five metabolites. These are:
 
 - `Lipid_conc` (i.e. the weight of the hexane fraction, divided by the full dry weight), 
 - `Carbohydrate_conc` (i.e. the weight of the aqueous fraction, divided by the full dry weight), 
@@ -94,10 +94,10 @@ scaled_metabolites <- metabolites %>%
   mutate(Dry_weight = as.numeric(scale(Dry_weight))) %>%
   mutate(sextreat = paste(sex, treatment),
          sextreat = replace(sextreat, sextreat == "Male Monogamy", "M males"),
-         sextreat = replace(sextreat, sextreat == "Male Polyandry", "P males"),
+         sextreat = replace(sextreat, sextreat == "Male Polyandry", "E males"),
          sextreat = replace(sextreat, sextreat == "Female Monogamy", "M females"),
-         sextreat = replace(sextreat, sextreat == "Female Polyandry", "P females"),
-         sextreat = factor(sextreat, c("M males", "P males", "M females", "P females")))
+         sextreat = replace(sextreat, sextreat == "Female Polyandry", "E females"),
+         sextreat = factor(sextreat, c("M males", "E males", "M females", "E females")))
 ```
 
 ## Inspect the raw data
@@ -137,15 +137,15 @@ scaled_metabolites %>%
 
 ### Simple plots
 
-The following plot shows how each metabolite varies between sexes and treatments, and how the consecration of each metabolite co-varies with dry weight across individuals. 
+The following plot shows how each metabolite varies between sexes and treatments, and how the concentration of each metabolite co-varies with dry weight across individuals. 
 
 ```{r, fig.height=5}
 levels <- c("Carbohydrate", "Chitin", "Glycogen", "Lipid", "Protein", "Dry weight")
 
 cols <- c("M females" = "pink", 
-          "P females" = "red", 
+          "E females" = "red", 
           "M males" = "skyblue", 
-          "P males" = "blue")
+          "E males" = "blue")
 
 grid.arrange(
   scaled_metabolites %>% 
@@ -192,7 +192,7 @@ grid.arrange(
 
 ### Plot of correlations between variables
 
-Some of the metabolites, especially lipid concentration, are correlated with dry weight. There is also a large difference in dry weight between sexes (and treatments, to a less extent), and sex and treatment effects are evident for some of the metabolites in the raw data. Some of the metabolites are weakly correlated with other metabolites, e.g. lipid and glycogen concentration.
+Some of the metabolites, especially lipid concentration, are correlated with dry weight. There is also a large difference in dry weight between sexes (and treatments, to a lesser extent), and sex and treatment effects are evident for some of the metabolites in the raw data. Some of the metabolites are weakly correlated with other metabolites, e.g. lipid and glycogen concentration.
 
 ```{r, fig.width = 10, fig.height = 10}
 modified_densityDiag <- function(data, mapping, ...) {
@@ -233,7 +233,7 @@ metabolite_pairs_plot <- scaled_metabolites %>%
                        discrete = wrap("blank"),
                        combo = wrap(modified_box_no_facet, alpha = 0.7, size = 0.5))) 
 
-metabolite_pairs_plot %>% ggsave(filename = "figures/metabolite_pairs_plot.pdf", height = 10, width = 10)
+#metabolite_pairs_plot %>% ggsave(filename = "figures/metabolite_pairs_plot.pdf", height = 10, width = 10)
 metabolite_pairs_plot
 ```
 
@@ -248,8 +248,6 @@ metabolites %>%
             n = n()) %>% 
   kable(digits = 3) %>% kable_styling(full_width = FALSE)
 ```
-
-
 
 
 ## Directed acyclic graph (DAG)
@@ -267,8 +265,8 @@ node [shape = rectangle, style = filled, fillcolor = Linen]
 "Metabolite\ncomposition" [shape = oval, fillcolor = Beige]
 
 # edge definitions with the node IDs
-"Mating system\ntreatment (M vs P)" -> {"Dry weight"}
-"Mating system\ntreatment (M vs P)" -> {"Metabolite\ncomposition"} 
+"Mating system\ntreatment (E vs M)" -> {"Dry weight"}
+"Mating system\ntreatment (E vs M)" -> {"Metabolite\ncomposition"} 
 
 "Sex\n(Female vs Male)" -> {"Dry weight"} -> {"Metabolite\ncomposition"}
 "Sex\n(Female vs Male)" -> {"Metabolite\ncomposition"}
@@ -282,13 +280,12 @@ node [shape = rectangle, style = filled, fillcolor = Linen]
 ```
 
 
-
 ## Fit `brms` structural equation model
 Here we fit a model of the five metabolites, which includes dry body weight as a mediator variable. That is, our model estimates the effect of treatment, sex and line (and all the 2- and 3-way interactions) on dry weight, and then estimates the effect of those some predictors (plus dry weight) on the five metabolites. The model assumes that although the different sexes, treatment groups, and lines may differ in their dry weight, the relationship between dry weight and the metabolites does not vary by sex/treatment/line. This assumption was made to constrain the number of parameters in the model, and to reflect out prior beliefs about allometric scaling of metabolites.   
 
 
 ### Define Priors
-We use set fairly tight Normal priors on all fixed effect parameters,  which 'regularises' the estimates towards zero -- this is conservative (because it ensures that a stronger signal in the data is needed to produce a given posterior effect size estimate), and it also helps the model to converge. Similarly, we set a somewhat conservative half-cauchy prior (mean 0, scale 0.01) on the random effects for `line` (i.e. we consider large differences between lines -- in terms of means and treatment effects -- to be possible but improbable). We leave all other priors at the defaults used by `brms`. Note that the Normal priors are slightly wider in the model of dry weight, because we expect larger effect sizes of sex and treatment on dry weight than on the metabolite composition. 
+We set fairly tight Normal priors on all fixed effect parameters,  which 'regularises' the estimates towards zero -- this is conservative (because it ensures that a stronger signal in the data is needed to produce a given posterior effect size estimate), and it also helps the model to converge. Similarly, we set a somewhat conservative half-cauchy prior (mean 0, scale 0.01) on the random effects for `line` (i.e. we consider large differences between lines -- in terms of means and treatment effects -- to be possible but improbable). We leave all other priors at the defaults used by `brms`. Note that the Normal priors are slightly wider in the model of dry weight, because we expect larger effect sizes of sex and treatment on dry weight than on the metabolite composition. 
 
 ```{r}
 prior1 <- c(set_prior("normal(0, 0.5)", class = "b", resp = 'Lipid'),
@@ -379,7 +376,7 @@ grid.arrange(
 
 ### Formatted table
 
-This tables shows the fixed effects estimates for the treatment, sex, their interaction, as well as the slope associated with dry weight (where relevant), for each of the six response variables. The `p` column shows 1 - minus the "probability of direction", i.e. the posterior probability that the reported sign of the estimate is correct given the data and the prior; subtracting this value from one gives a Bayesian equivalent of a one-sided p-value. For brevity, we have omitted all the parameter estimates involving the predictor variable `line`, as well as the estimates of residual (co)variance. Click the next tab to see a complete summary of the model and its output.
+This tables shows the fixed effects estimates for treatment, sex, their interaction, as well as the slope associated with dry weight (where relevant), for each of the six response variables. The `p` column shows 1 - minus the "probability of direction", i.e. the posterior probability that the reported sign of the estimate is correct given the data and the prior; subtracting this value from one gives a Bayesian equivalent of a one-sided p-value. For brevity, we have omitted all the parameter estimates involving the predictor variable `line`, as well as the estimates of residual (co)variance. Click the next tab to see a complete summary of the model and its output.
 
 ```{r}
 vars <- c("Lipid", "Carbohydrate", "Glycogen", "Protein", "Chitin")
@@ -428,12 +425,12 @@ pvals <- bayestestR::p_direction(brms_metabolite_SEM) %>%
 
 hypSEM <- hypSEM %>% left_join(pvals, by = c("vars", "tests"))
 
-hypSEM  %>% 
+hypSEM %>% 
   mutate(Parameter = c(rep(c('Dry weight', 'Sex (M)', 
-                             'Sex (M) x Treatment (P)', 
-                             'Treatment (P)'), 5), 
-                       'Sex (M)', 'Treatment (P)', 'Sex (M) x Treatment (P)'))  %>% 
-  mutate(Parameter = factor(Parameter, c("Dry weight", "Sex (M)", "Treatment (P)", "Sex (M) x Treatment (P)")),
+                             'Sex (M) x Treatment (E)', 
+                             'Treatment (E)'), 5), 
+                       'Sex (M)', 'Treatment (E)', 'Sex (M) x Treatment (E)'))  %>% 
+  mutate(Parameter = factor(Parameter, c("Dry weight", "Sex (M)", "Treatment (E)", "Sex (M) x Treatment (E)")),
          vars = factor(vars, c("Carbohydrate", "Chitin", "Glycogen", "Lipid", "Protein", "Dryweight"))) %>%
   arrange(vars, Parameter) %>%
   select(Parameter, Estimate = est, `Est. error` = err, 
@@ -463,14 +460,13 @@ brms_metabolite_SEM
 ```
 
 
-
 ## Posterior effect size of treatment on metabolite abundance, for each sex
 
-Here, we use the model to predict the mean concentration of each metabolite (in standard units) in each treatment and sex (averaged across the eight replicate selection lines). We then calculate the effect size of treatment by subtracting the (sex-specific) mean for the M treatment from the mean for the P treatment; thus a value of 1 would mean that the P treatment has a mean that is larger by 1 standard deviation. Thus, the y-axis in the following graphs essentially shows the posterior estimate of standardised effect size (Cohen's d), from the model shown above. 
+Here, we use the model to predict the mean concentration of each metabolite (in standard units) in each treatment and sex (averaged across the eight replicate selection lines). We then calculate the effect size of treatment by subtracting the (sex-specific) mean for the M treatment from the mean for the E treatment; thus a value of 1 would mean that the E treatment has a mean that is larger by 1 standard deviation. Thus, the y-axis in the following graphs essentially shows the posterior estimate of standardised effect size (Cohen's d), from the model shown above. 
 
-Because the model contains dry weight as a mediator variable, we created these predictions two different ways, and display the answer for both using tabs in the following figures/tables. Firstly, we predicted the means *controlling for differences in dry weight between sexes and treatments*; this was done by deriving the predictions dry weight set to its global mean, for both sexes and treatments. Secondly, we derived predictions without controlling for dry weight. This was done by deriving the predictions with dry weight set to its average value for the appropriate treatment-sex combination. 
+Because the model contains dry weight as a mediator variable, we created these predictions two different ways, and display the answer for both using tabs in the following figures/tables. Firstly, we predicted the means *controlling for differences in dry weight between sexes and treatments*; this was done by deriving the predictions with dry weight set to its global mean, for both sexes and treatments. Secondly, we derived predictions without controlling for dry weight. This was done by deriving the predictions with dry weight set to its average value for the appropriate treatment-sex combination. 
 
-By clicking the tabs and comparing, one can see that the estimates of the treatment effect hardly change when differences in dry weight are controlled for. This indicates that dry mass does not have an important role in mediating the effect of treatment on metabolite composition, even though body size differs between treatments. Thus, we conclude that the M vs P treatments caused metabolite composition to evolve, through mechanisms other than the evolution of dry weight. 
+By clicking the tabs and comparing, one can see that the estimates of the treatment effect hardly change when differences in dry weight are controlled for. This indicates that dry mass does not have an important role in mediating the effect of treatment on metabolite composition, even though body size differs between treatments. Thus, we conclude that the M vs E treatments caused metabolite composition to evolve, through mechanisms other than the evolution of dry weight. 
 
 ### Figure {.tabset}
 
@@ -576,14 +572,13 @@ p1 <- treat_diff_actual_dryweight %>%
         text = element_text(family = nice_font),
         panel.grid.major.x = element_blank()) +
   coord_cartesian(ylim = ylims) + 
-  ylab("Difference in means between\nselection treatments (P - M)") + xlab("Sex")
-
-
-ggsave("figures/metabolite_plot.pdf", p1, height=4, width=6)
+  ylab("Difference in means between\nselection treatments (E - M)") + xlab("Sex") +
+  #ggsave("figures/metabolite_plot.pdf", height=3, width=6) +
+  NULL
 p1
 ```
 
-**Figure XX**: Posterior estimates of the treatment effect size for both sexes, for each of the five metabolites. A positive value means that the mean metabolite concentration is higher in the P treatment than the M treatment, while a negative effects denotes M > P. A strongly supported treatment effect is implied by the majority of the posterior lying to one side of zero. The error bars summarise the 66% and 95% quantiles of the posterior. This plot was created used posterior predictions of the means that were _not_ adjusted for differences in dry weight between treatments.
+**Figure XX**: Posterior estimates of the treatment effect size for both sexes, for each of the five metabolites. A positive value means that the mean metabolite concentration is higher in the E treatment than the M treatment, while a negative effects denotes M > E. A strongly supported treatment effect is implied by the majority of the posterior lying to one side of zero. The error bars summarise the 66% and 95% quantiles of the posterior. This plot was created used posterior predictions of the means that were _not_ adjusted for differences in dry weight between treatments.
 
 
 #### Controlling for differences in dry weight between treatments
@@ -591,7 +586,7 @@ p1
 ```{r, fig.height=4, fig.showtext=TRUE}
 treat_diff_standard_dryweight %>%
   filter(variable != 'Dryweight') %>% 
-  ggplot(aes(x = sex, y = `Difference in means (Poly - Mono)`,fill = sex)) +
+  ggplot(aes(x = sex, y = `Difference in means (Poly - Mono)`, fill = sex)) +
   geom_hline(yintercept = 0, linetype = 2) +
   stat_halfeye() + 
   geom_line(data = treat_diff_standard_dryweight %>%
@@ -608,12 +603,12 @@ treat_diff_standard_dryweight %>%
         text = element_text(family = nice_font),
         panel.grid.major.x = element_blank()) +
   coord_cartesian(ylim = ylims) + 
-  ylab("Difference in means between\nselection treatments (P - M)") + xlab("Sex") + 
-  #ggsave('figures/metabolite_plotCONTROLLED.pdf', height=4, width=6) +
+  ylab("Difference in means between\nselection treatments (E - M)") + xlab("Sex") + 
+  #ggsave('figures/metabolite_plotCONTROLLED.pdf', height=3, width=6) +
   NULL
 ```
 
-**Figure XX**: Posterior estimates of the treatment effect size for both sexes, for each of the five metabolites. A positive value means that the mean metabolite concentration is higher in the P treatment than the M treatment, while a negative effects denotes M > P. A strongly supported treatment effect is implied by the majority of the posterior lying to one side of zero. The error bars summarise the 66% and 95% quantiles of the posterior. This plot was created used posterior predictions of the means that were adjusted for differences in dry weight between treatments.
+**Figure XX**: Posterior estimates of the treatment effect size for both sexes, for each of the five metabolites. A positive value means that the mean metabolite concentration is higher in the P treatment than the M treatment, while a negative effects denotes M > E. A strongly supported treatment effect is implied by the majority of the posterior lying to one side of zero. The error bars summarise the 66% and 95% quantiles of the posterior. This plot was created used posterior predictions of the means that were adjusted for differences in dry weight between treatments.
 
 
 ### Table {.tabset}
@@ -637,7 +632,7 @@ summary_dat2 %>%
 
 ## Posterior difference in treatment effect size between sexes 
 
-This section essentially examines the treatment $\times$ sex interaction term, by calculating the difference in the effect size of the P/M treatment between sexes, for each of the five metabolites. We find no strong evidence for a treatment $\times$ sex interaction, i.e. the treatment effects did not differ detectably between sexes.
+This section essentially examines the treatment $\times$ sex interaction term, by calculating the difference in the effect size of the E/M treatment between sexes, for each of the five metabolites. We find no strong evidence for a treatment $\times$ sex interaction, i.e. the treatment effects did not differ detectably between sexes.
 
 ### Figure {.tabset}
 
@@ -656,20 +651,21 @@ p2 <- treatsex_interaction_data1 %>%
   filter(variable != 'Dryweight') %>% 
   ggplot(aes(x = `Difference in effect size between sexes (male - female)`, y = 1, fill = stat(x < 0))) +
   geom_vline(xintercept = 0, linetype = 2) +
-  stat_halfeyeh() +
+  stat_halfeye() +
   facet_wrap( ~ variable) +
   scale_fill_brewer(palette = 'Pastel2', direction = 1, name = "") +
   theme_bw() +
   theme(legend.position = 'none',
         text = element_text(family = nice_font),
         strip.background = element_blank()) +
-  ylab("Posterior density")
+  ylab("Posterior density") +
+  #ggsave("figures/metabolite_interaction_plot.pdf", height=4, width=6) +
+  NULL
 
-ggsave("figures/metabolite_interaction_plot.pdf", p2, height=4, width=6)
 p2
 ```
 
-**Figure XX**: Posterior estimates of the difference in the treatment effect size (i.e. mean of P minus mean of M) between males and females, for each of the five metabolites. A positive value means that the effect size is more positive in males, and negative means it is more positive in females. A strongly supported sex difference in effect size would be implied by the majority of the posterior lying to one side of zero. The error bars summarise the 66% and 95% quantiles of the posterior. This plot was created used posterior predictions of the means that were _not_ adjusted for differences in dry weight between treatments.
+**Figure XX**: Posterior estimates of the difference in the treatment effect size (i.e. mean of E minus mean of M) between males and females, for each of the five metabolites. A positive value means that the effect size is more positive in males, and negative means it is more positive in females. A strongly supported sex difference in effect size would be implied by the majority of the posterior lying to one side of zero. The error bars summarise the 66% and 95% quantiles of the posterior. This plot was created used posterior predictions of the means that were _not_ adjusted for differences in dry weight between treatments.
 
 #### Controlling for differences in dry weight between treatments
 
@@ -685,7 +681,7 @@ treatsex_interaction_data2 %>%
   filter(variable != 'Dryweight') %>% 
   ggplot(aes(x = `Difference in effect size between sexes (male - female)`, y = 1, fill = stat(x < 0))) +
   geom_vline(xintercept = 0, linetype = 2) +
-  stat_halfeyeh() +
+  stat_halfeye() +
   facet_wrap( ~ variable) +
   scale_fill_brewer(palette = 'Pastel2', direction = 1, name = "") +
   theme_bw() +
@@ -695,9 +691,7 @@ treatsex_interaction_data2 %>%
   ylab("Posterior density")
 ```
 
-**Figure XX**: Posterior estimates of the difference in the treatment effect size (i.e. mean of P minus mean of M) between males and females, for each of the five metabolites. A positive value means that the effect size is more positive in males, and negative means it is more positive in females. A strongly supported sex difference in effect size would be implied by the majority of the posterior lying to one side of zero. The error bars summarise the 66% and 95% quantiles of the posterior. This plot was created used posterior predictions of the means that were adjusted for differences in dry weight between treatments.
-
-
+**Figure XX**: Posterior estimates of the difference in the treatment effect size (i.e. mean of E minus mean of M) between males and females, for each of the five metabolites. A positive value means that the effect size is more positive in males, and negative means it is more positive in females. A strongly supported sex difference in effect size would be implied by the majority of the posterior lying to one side of zero. The error bars summarise the 66% and 95% quantiles of the posterior. This plot was created used posterior predictions of the means that were adjusted for differences in dry weight between treatments.
 
 
 ### Table {.tabset}
@@ -737,3 +731,67 @@ treatsex_interaction_data2 %>%
   kable_styling(full_width = FALSE)
 
 ```
+
+
+## Posterior effect size of sex on metabolite abundance, for each treatment
+
+Similar to above, in this section we calculate the effect size of sex for each metabolite by subtracting the (treatment-specific) mean for males from the mean for females.
+
+
+```{r}
+sex_diff_actual_dryweight <- fitted_values %>%
+  filter(!(Dryweight %in% c(male_dryweight, female_dryweight))) %>% 
+  select(-Dryweight) %>%
+  pivot_wider(names_from = sex, 
+              values_from = c(value)) %>% 
+  mutate(`Difference in means (Female - Male)` = Female - Male)
+```
+
+
+#### Not controlling for differences in dry weight between sexes
+
+We find that most metabolites differ between the sexes and as the previous analysis looking at the treatment x sex interaction shows, this is largely the same across treatments. Males have more chitin and females have more lipids
+in both treatments, E females have more carbohydrates and E males, M females have more glycogen than M males,and E males have more protein than E females.
+
+```{r}
+summary_dat4 <- sex_diff_actual_dryweight %>%
+  rename(x = `Difference in means (Female - Male)`) %>%
+  group_by(variable, treatment)  %>%
+  summarise(`Difference in means (Female - Male)` = median(x),
+            `Lower 95% CI` = quantile(x, probs = 0.025), 
+            `Upper 95% CI` = quantile(x, probs = 0.975),
+            p = 1 - as.numeric(bayestestR::p_direction(x)),
+            ` ` = ifelse(p < 0.05, "\\*", ""),
+            .groups = "drop")
+
+sex_diff_actual_dryweight %>%
+  ggplot(aes(x = treatment, y = `Difference in means (Female - Male)`, fill = treatment)) +
+  geom_hline(yintercept = 0, linetype = 2) +
+  stat_halfeye() + 
+  geom_line(data = sex_diff_actual_dryweight %>%
+              filter(draw %in% sampled_draws) %>%
+              filter(variable != 'Dryweight'), 
+            alpha = 0.8, size = 0.12, colour = "black", aes(group = draw)) +
+  geom_point(data = summary_dat4, pch = 21, colour = "black", size = 3.1) + 
+  scale_fill_brewer(palette = 'Pastel1', direction = 1, name = "") +
+  scale_colour_brewer(palette = 'Pastel1', direction = 1, name = "") +
+  facet_wrap( ~ variable,  nrow = 1) +
+  theme_bw() +
+  theme(legend.position = 'none',
+        strip.background = element_blank(),
+        text = element_text(family = nice_font),
+        panel.grid.major.x = element_blank()) +
+  coord_cartesian(ylim = c(-2, 2)) + 
+  ylab("Difference in means between\nsexes (Female - Male)") + xlab("Treatment") + 
+  #ggsave('figures/metabolite_plotCONTROLLED.pdf', height=3, width=6) +
+  NULL
+```
+
+#### Table
+
+```{r}
+summary_dat4 %>%
+  kable(digits = 3) %>%
+  kable_styling(full_width = FALSE)
+```
+
